Add CLI vault update API
