# packages/api/generated.go
@@ -487,6 +487,12 @@ type RequestPasswordResetJSONRequestBody = PasswordResetRequest
 // SignupJSONRequestBody defines body for Signup for application/json ContentType.
 type SignupJSONRequestBody = SignupRequest
 
+// UpdateVaultByNameAPIKeyJSONRequestBody defines body for UpdateVaultByNameAPIKey for application/json ContentType.
+type UpdateVaultByNameAPIKeyJSONRequestBody = UpdateVaultRequest
+
+// UpdateVaultByAPIKeyJSONRequestBody defines body for UpdateVaultByAPIKey for application/json ContentType.
+type UpdateVaultByAPIKeyJSONRequestBody = UpdateVaultRequest
+
 // CreateVaultJSONRequestBody defines body for CreateVault for application/json ContentType.
 type CreateVaultJSONRequestBody = CreateVaultRequest
 
@@ -541,8 +547,14 @@ type ServerInterface interface {
 	// (GET /api/cli/vault/name/{name})
 	GetVaultByNameAPIKey(c *fiber.Ctx, name string) error
 
+	// (PUT /api/cli/vault/name/{name})
+	UpdateVaultByNameAPIKey(c *fiber.Ctx, name string) error
+
 	// (GET /api/cli/vault/{uniqueId})
 	GetVaultByAPIKey(c *fiber.Ctx, uniqueId string) error
+
+	// (PUT /api/cli/vault/{uniqueId})
+	UpdateVaultByAPIKey(c *fiber.Ctx, uniqueId string) error
 
 	// (GET /api/cli/vaults)
 	GetVaultsByAPIKey(c *fiber.Ctx) error
@@ -843,6 +855,24 @@ func (siw *ServerInterfaceWrapper) GetVaultByNameAPIKey(c *fiber.Ctx) error {
 	return siw.Handler.GetVaultByNameAPIKey(c, name)
 }
 
+// UpdateVaultByNameAPIKey operation middleware
+func (siw *ServerInterfaceWrapper) UpdateVaultByNameAPIKey(c *fiber.Ctx) error {
+
+	var err error
+
+	// ------------- Path parameter "name" -------------
+	var name string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "name", c.Params("name"), &name, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, fmt.Errorf("Invalid format for parameter name: %w", err).Error())
+	}
+
+	c.Context().SetUserValue(ApiKeyAuthScopes, []string{})
+
+	return siw.Handler.UpdateVaultByNameAPIKey(c, name)
+}
+
 // GetVaultByAPIKey operation middleware
 func (siw *ServerInterfaceWrapper) GetVaultByAPIKey(c *fiber.Ctx) error {
 
@@ -859,6 +889,24 @@ func (siw *ServerInterfaceWrapper) GetVaultByAPIKey(c *fiber.Ctx) error {
 	c.Context().SetUserValue(ApiKeyAuthScopes, []string{})
 
 	return siw.Handler.GetVaultByAPIKey(c, uniqueId)
+}
+
+// UpdateVaultByAPIKey operation middleware
+func (siw *ServerInterfaceWrapper) UpdateVaultByAPIKey(c *fiber.Ctx) error {
+
+	var err error
+
+	// ------------- Path parameter "uniqueId" -------------
+	var uniqueId string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "uniqueId", c.Params("uniqueId"), &uniqueId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, fmt.Errorf("Invalid format for parameter uniqueId: %w", err).Error())
+	}
+
+	c.Context().SetUserValue(ApiKeyAuthScopes, []string{})
+
+	return siw.Handler.UpdateVaultByAPIKey(c, uniqueId)
 }
 
 // GetVaultsByAPIKey operation middleware
@@ -1035,7 +1083,11 @@ func RegisterHandlersWithOptions(router fiber.Router, si ServerInterface, option
 
 	router.Get(options.BaseURL+"/api/cli/vault/name/:name", wrapper.GetVaultByNameAPIKey)
 
+	router.Put(options.BaseURL+"/api/cli/vault/name/:name", wrapper.UpdateVaultByNameAPIKey)
+
 	router.Get(options.BaseURL+"/api/cli/vault/:uniqueId", wrapper.GetVaultByAPIKey)
+
+	router.Put(options.BaseURL+"/api/cli/vault/:uniqueId", wrapper.UpdateVaultByAPIKey)
 
 	router.Get(options.BaseURL+"/api/cli/vaults", wrapper.GetVaultsByAPIKey)
 
@@ -1378,6 +1430,24 @@ func (response GetVaultByNameAPIKey200JSONResponse) VisitGetVaultByNameAPIKeyRes
 	return ctx.JSON(&response)
 }
 
+type UpdateVaultByNameAPIKeyRequestObject struct {
+	Name string `json:"name"`
+	Body *UpdateVaultByNameAPIKeyJSONRequestBody
+}
+
+type UpdateVaultByNameAPIKeyResponseObject interface {
+	VisitUpdateVaultByNameAPIKeyResponse(ctx *fiber.Ctx) error
+}
+
+type UpdateVaultByNameAPIKey200JSONResponse Vault
+
+func (response UpdateVaultByNameAPIKey200JSONResponse) VisitUpdateVaultByNameAPIKeyResponse(ctx *fiber.Ctx) error {
+	ctx.Response().Header.Set("Content-Type", "application/json")
+	ctx.Status(200)
+
+	return ctx.JSON(&response)
+}
+
 type GetVaultByAPIKeyRequestObject struct {
 	UniqueId string `json:"uniqueId"`
 }
@@ -1389,6 +1459,24 @@ type GetVaultByAPIKeyResponseObject interface {
 type GetVaultByAPIKey200JSONResponse Vault
 
 func (response GetVaultByAPIKey200JSONResponse) VisitGetVaultByAPIKeyResponse(ctx *fiber.Ctx) error {
+	ctx.Response().Header.Set("Content-Type", "application/json")
+	ctx.Status(200)
+
+	return ctx.JSON(&response)
+}
+
+type UpdateVaultByAPIKeyRequestObject struct {
+	UniqueId string `json:"uniqueId"`
+	Body     *UpdateVaultByAPIKeyJSONRequestBody
+}
+
+type UpdateVaultByAPIKeyResponseObject interface {
+	VisitUpdateVaultByAPIKeyResponse(ctx *fiber.Ctx) error
+}
+
+type UpdateVaultByAPIKey200JSONResponse Vault
+
+func (response UpdateVaultByAPIKey200JSONResponse) VisitUpdateVaultByAPIKeyResponse(ctx *fiber.Ctx) error {
 	ctx.Response().Header.Set("Content-Type", "application/json")
 	ctx.Status(200)
 
@@ -1624,8 +1712,14 @@ type StrictServerInterface interface {
 	// (GET /api/cli/vault/name/{name})
 	GetVaultByNameAPIKey(ctx context.Context, request GetVaultByNameAPIKeyRequestObject) (GetVaultByNameAPIKeyResponseObject, error)
 
+	// (PUT /api/cli/vault/name/{name})
+	UpdateVaultByNameAPIKey(ctx context.Context, request UpdateVaultByNameAPIKeyRequestObject) (UpdateVaultByNameAPIKeyResponseObject, error)
+
 	// (GET /api/cli/vault/{uniqueId})
 	GetVaultByAPIKey(ctx context.Context, request GetVaultByAPIKeyRequestObject) (GetVaultByAPIKeyResponseObject, error)
+
+	// (PUT /api/cli/vault/{uniqueId})
+	UpdateVaultByAPIKey(ctx context.Context, request UpdateVaultByAPIKeyRequestObject) (UpdateVaultByAPIKeyResponseObject, error)
 
 	// (GET /api/cli/vaults)
 	GetVaultsByAPIKey(ctx context.Context, request GetVaultsByAPIKeyRequestObject) (GetVaultsByAPIKeyResponseObject, error)
@@ -2109,6 +2203,39 @@ func (sh *strictHandler) GetVaultByNameAPIKey(ctx *fiber.Ctx, name string) error
 	return nil
 }
 
+// UpdateVaultByNameAPIKey operation middleware
+func (sh *strictHandler) UpdateVaultByNameAPIKey(ctx *fiber.Ctx, name string) error {
+	var request UpdateVaultByNameAPIKeyRequestObject
+
+	request.Name = name
+
+	var body UpdateVaultByNameAPIKeyJSONRequestBody
+	if err := ctx.BodyParser(&body); err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, err.Error())
+	}
+	request.Body = &body
+
+	handler := func(ctx *fiber.Ctx, request interface{}) (interface{}, error) {
+		return sh.ssi.UpdateVaultByNameAPIKey(ctx.UserContext(), request.(UpdateVaultByNameAPIKeyRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "UpdateVaultByNameAPIKey")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, err.Error())
+	} else if validResponse, ok := response.(UpdateVaultByNameAPIKeyResponseObject); ok {
+		if err := validResponse.VisitUpdateVaultByNameAPIKeyResponse(ctx); err != nil {
+			return fiber.NewError(fiber.StatusBadRequest, err.Error())
+		}
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
 // GetVaultByAPIKey operation middleware
 func (sh *strictHandler) GetVaultByAPIKey(ctx *fiber.Ctx, uniqueId string) error {
 	var request GetVaultByAPIKeyRequestObject
@@ -2128,6 +2255,39 @@ func (sh *strictHandler) GetVaultByAPIKey(ctx *fiber.Ctx, uniqueId string) error
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	} else if validResponse, ok := response.(GetVaultByAPIKeyResponseObject); ok {
 		if err := validResponse.VisitGetVaultByAPIKeyResponse(ctx); err != nil {
+			return fiber.NewError(fiber.StatusBadRequest, err.Error())
+		}
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
+// UpdateVaultByAPIKey operation middleware
+func (sh *strictHandler) UpdateVaultByAPIKey(ctx *fiber.Ctx, uniqueId string) error {
+	var request UpdateVaultByAPIKeyRequestObject
+
+	request.UniqueId = uniqueId
+
+	var body UpdateVaultByAPIKeyJSONRequestBody
+	if err := ctx.BodyParser(&body); err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, err.Error())
+	}
+	request.Body = &body
+
+	handler := func(ctx *fiber.Ctx, request interface{}) (interface{}, error) {
+		return sh.ssi.UpdateVaultByAPIKey(ctx.UserContext(), request.(UpdateVaultByAPIKeyRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "UpdateVaultByAPIKey")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, err.Error())
+	} else if validResponse, ok := response.(UpdateVaultByAPIKeyResponseObject); ok {
+		if err := validResponse.VisitUpdateVaultByAPIKeyResponse(ctx); err != nil {
 			return fiber.NewError(fiber.StatusBadRequest, err.Error())
 		}
 	} else if response != nil {
