# packages/api/openapi/paths/apikey-vault.yaml
@@ -39,6 +39,33 @@ apiKeyVaultById:
           application/json:
             schema:
               $ref: ../schemas/vault.yaml#/Vault
+  put:
+    description: Update a specific vault by Unique ID using API key
+    tags:
+      - Cli
+    operationId: updateVaultByAPIKey
+    security:
+      - ApiKeyAuth: []
+    parameters:
+      - name: uniqueId
+        in: path
+        required: true
+        description: Vault Unique ID
+        schema:
+          type: string
+    requestBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: ../schemas/vault.yaml#/UpdateVaultRequest
+    responses:
+      "200":
+        description: Vault updated successfully
+        content:
+          application/json:
+            schema:
+              $ref: ../schemas/vault.yaml#/Vault
 apiKeyVaultByName:
   get:
     description: Get a specific vault by name using API key
@@ -57,6 +84,33 @@ apiKeyVaultByName:
     responses:
       "200":
         description: Vault details
+        content:
+          application/json:
+            schema:
+              $ref: ../schemas/vault.yaml#/Vault
+  put:
+    description: Update a specific vault by name using API key
+    tags:
+      - Cli
+    operationId: updateVaultByNameAPIKey
+    security:
+      - ApiKeyAuth: []
+    parameters:
+      - name: name
+        in: path
+        required: true
+        description: Vault name
+        schema:
+          type: string
+    requestBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: ../schemas/vault.yaml#/UpdateVaultRequest
+    responses:
+      "200":
+        description: Vault updated successfully
         content:
           application/json:
             schema:
